--- a/.github/workflows/daily_brief.yml
+++ b/.github/workflows/daily_brief.yml
@@ -1,6 +1,32 @@
+name: Daily News Brief
+
 on:
   schedule:
     # 7:00 UTC = 8:00 AM Morocco
     # 18:00 UTC = 7:00 PM Morocco
     - cron: '0 7,18 * * *'
-  workflow_dispatch: # Keeps the manual run button
+  workflow_dispatch: # Allows manual testing
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.9'
+
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
+
+    - name: Run Bot
+      env:
+        TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+      run: python main.py
